feat: melhorias de codigo Modulo 2 - Curso 2 Spring Boot 3 Alura